# auto-ai-agent-framework

./: .gitignore  CHANGELOG.md  DOCUMENTATION_INTEGRATION_PLAN.md  HOSTING_GUIDE.md  README.md  pyproject.toml  vercel.json
.claude/: settings.local.json
agent-framework-pypi/: README.md  pyproject.toml
agent-framework-pypi/docs/: conf.py  contributing.md  getting-started.md  index.rst  quickstart.md
docs/: .buildinfo  framework_guide.html  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  overview.doctree
docs/_modules/: index.html
docs/_sources/: index.rst.txt
docs/api/: index.html
docs/guides/: 12302025_memory_improvements_todo.html  architecture_workflow.html  async_safety.html  environment_variables.html  event_system.html  hierarchical_filtering.html  index.html  message_store_format.html  message_store_implementation.html  message_store_integration.html  model_optimization_strategy.html  orchestrator_vs_manager.html  phoenix_tracing.html  strategic_planning_architecture.html  structured_final_response.html  tool_choice_mechanism.html  utility_tools.html
docs/part1_orientation/: conceptual_model.html  index.html  overview.html  quickstart.html
docs/part2_runtime/: agents.html  context_services.html  index.html  memory-presets.html  memory.html  observability.html  planners.html  policies.html  policy-presets.html  tools.html
docs/part3_solutions/: configuration.html  deployment.html  flows.html  index.html  job_state.html  message_stores.html
docs/part4_cookbook/: custom_planner.html  custom_tool.html  index.html  inference_gateway.html  progress_subscriber.html  tool_policy.html
docs/part5_operations/: index.html  monitoring.html  security.html  troubleshooting.html
docs/part6_playbooks/: code_assistant.html  data_analytics.html  document_processing.html  index.html  overview.html
docs/part7_reference/: api.html  env_variables.html  index.html  message_format.html  migration.html
docs/part8_patterns/: hitl_approval.html  index.html  manager_workers.html  multi_tool_agent.html  shared_memory_team.html  three_tier_hierarchy.html
docs/powerbi/: agent_structure.html  flows.html  index.html  kg_tools_alignment.html  setup.html  tool_access_restriction.html  tools.html
docs/powerbi_impl/: agent_stack.html  data_services.html  implementation_status.html  index.html  tools_coverage.html  (+2 more)
(+150 files in other folders)
